# sentientforge

./: OVERNIGHT_SUMMARY.md  README.md  check_status.sh  experiment.py  pyproject.toml  results-overnight.tsv  results.tsv
.github/workflows/: ci.yml
config/: experiment.json
tests/: test_experiment.py
