[project]
name = "sentientforge"
version = "1.0.0"
description = "Experiment tracking and data analysis"
requires-python = ">=3.11"
dependencies = ["pandas", "numpy"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["experiment.py", "test_*.py"]

